--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   ],
   "author": {
     "name": "Gilbert Dyer",
-    "email": "your.email@example.com",
-    "url": "https://github.com/your-github-username"
+    "email": "gilbertdyer13@gmail.com",
   }
 }
