--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   ],
   "author": {
     "name": "Gilbert Dyer",
-    "email": "gilbertdyer13@gmail.com",
+    "email": "gilbertdyer13@gmail.com"
   }
 }
